#--------------------------------------------------------------------------
# File and Version Information:
#  $Id$
#
# Description:
#  ChangeLog file for package psddldata
#------------------------------------------------------------------------

Package author: Andrei Salnikov

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V00-00-13
2011-10-04 Andrei Salnikov
- CsPad.Element image data type changed from uint16_t to int16_t,
  calibration output which is essentially signed can reuse the same
  definitions
- methods common_mode(int) and sectionMask() added to CsPad.Element
  classes, this is to simplify data handling and unify with 
  calibrated data interface

Tag: V00-00-12
2011-09-12 Andrei Salnikov
- adding CsPad.MiniElementV1 class

Tag: V00-00-11
2011-08-29 Andrei Salnikov
- added Bld::BldDataPimV1 class

Tag: V00-00-10
2011-08-22 Andrei Salnikov
- added Princeton::ConfigV2 class (part of pdsdata V02-13-03)

Tag: V00-00-09
2011-06-16 Andrei Salnikov
- upgrade to pdsdata V02-11-05

Tag: V00-00-08
2011-04-26 Andrei Salnikov
- modified acqiris.DataDescV1Elem so that waveform() method returns 
  real poinyter to the beginning of the waveform data taking into 
  account indexFirstPoint() offset.

Tag: V00-00-07
2011-04-07 Andrei Salnikov
- added comments everywhere to generate docs for psana classes
- some bitfields were missing in Control.ConfigV1

Tag: V00-00-06
2011-04-01 Andrei Salnikov
- small fix in opal1k.ConfigV1 class

Tag: V00-00-05
2011-03-31 Andrei Salnikov
- renamed "dimentions" attribute into "shape"
- added "shape_method" attribute

Tag: V00-00-04
2011-03-28 Andrei Salnikov
- few changes to epics classes:
  - new intermediate type EpicsPvTimeHeader which is base for all *Time*
    classes and has a single method stamp()
  - EpicsPvHeader type has new methods isCtrl(), isTime(), status(), and
    severity()
  - precision() method was missing in floating point DBR classes

Tag: V00-00-03