@@ -1,0 +1,93 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<!DOCTYPE psddl SYSTEM "psddl.dtd">
+
+<psddl>
+    <package name="Gsc16ai">
+
+        Package containing definitions for Gsc16ai data types.
+
+
+        <!-- ========================================================================= -->
+        
+        <pstype name="ConfigV1" version="1" type_id="Id_Gsc16aiConfig" pack="4">
+
+            <const name="LowestChannel" value="0"/>
+            <const name="HighestChannel" value="15"/>
+            <const name="LowestFps" value="1"/>
+            <const name="HighestFps" value="120"/>
+        
+            <enum name="InputMode">
+                <enum-const name="InputMode_Differential" value="0"/>
+                <enum-const name="InputMode_Zero" value="1"/>
+                <enum-const name="InputMode_Vref" value="2"/>
+            </enum>
+        
+            <enum name="VoltageRange">
+                <enum-const name="VoltageRange_10V" value="0"/>
+                <enum-const name="VoltageRange_5V"/>
+                <enum-const name="VoltageRange_2_5V"/>
+            </enum>
+        
+            <enum name="TriggerMode">
+                <enum-const name="TriggerMode_ExtPos" value="0"/>
+                <enum-const name="TriggerMode_ExtNeg"/>
+                <enum-const name="TriggerMode_IntClk"/>
+            </enum>
+        
+            <enum name="DataFormat">
+                <enum-const name="DataFormat_TwosComplement" value="0"/>
+                <enum-const name="DataFormat_OffsetBinary"/>
+            </enum>
+        
+            <attribute name="_voltageRange" type="uint16_t" accessor="voltageRange">
+            </attribute>
+
+            <attribute name="_firstChan" type="uint16_t" accessor="firstChan">
+            </attribute>
+
+            <attribute name="_lastChan" type="uint16_t" accessor="lastChan">
+            </attribute>
+
+            <attribute name="_inputMode" type="uint16_t" accessor="inputMode">
+            </attribute>
+
+            <attribute name="_triggerMode" type="uint16_t" accessor="triggerMode">
+            </attribute>
+
+            <attribute name="_dataFormat" type="uint16_t" accessor="dataFormat">
+            </attribute>
+
+            <attribute name="_fps" type="uint16_t" accessor="fps">
+            </attribute>
+
+            <attribute name="_autocalibEnable" type="uint8_t" accessor="autocalibEnable">
+            </attribute>
+
+            <attribute name="_timeTagEnable" type="uint8_t" accessor="timeTagEnable">
+            </attribute>
+
+            <method name="numChannels" type="uint16_t">
+                <expr lang="C++" value="{self}._lastChan - {self}._firstChan + 1" />
+                <tag name="inline"/>
+            </method>
+
+        </pstype>
+        
+        <!-- ========================================================================= -->
+        
+        <pstype name="DataV1" version="1" type_id="Id_Gsc16aiData">
+        
+            <xtc-config name="ConfigV1" />
+
+            <attribute name="_timestamp" type="uint16_t" shape="3" accessor="timestamp">
+            </attribute>
+
+            <attribute name="_channelValue" type="uint16_t" shape="{xtc-config}.numChannels()" accessor="channelValue">
+            </attribute>
+
+        </pstype>
+        
+        <!-- ========================================================================= -->
+                
+    </package>
+</psddl>
